backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: famlink-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: famlink-backend
  template:
    metadata:
      labels:
        app: famlink-backend
    spec:
      containers:
      - name: famlink-backend
        image: ghcr.io/mattuu0/famlink/backend:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
