frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: famlink-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: famlink-frontend
  template:
    metadata:
      labels:
        app: famlink-frontend
    spec:
      containers:
      - name: famlink-frontend
        image: ghcr.io/mattuu0/famlink/frontend:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3001
