backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: famlink-backend-service
spec:
  type: LoadBalancer
  selector:
    app: famlink-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
