frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: famlink-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: famlink-frontend
  ports:
  - port: 80
    targetPort: 3000
