ingress.yaml
# ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: famlink-ingressroute
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`famlink.aoioq.com`) && PathPrefix(`/ui`)
      kind: Rule
      services:
        - name: sample-frontend-service
          port: 80
    - match: Host(`famlink-api.aoioq.com`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: app-stripprefix
      services:
        - name: sample-backend-service
          port: 3001
